# rush_hr_v2

./: .env.example  .eslintrc.json  .gitignore  DOCUMENTATION.md  DOCUMENT_PROCESSING_OPTIMIZATION.md  LICENSE  PRODUCTION_READY.md  README.md  package-lock.json  tailwind.config.ts  test-api.html
hr-assistant-pro/: .env.example  AZURE_OPENAI_SETUP.md  AZURE_SETUP_RUSH.md  CHAT_FEATURE_README.md  DEPLOYMENT_CHECKLIST.md  FLOATING_CHAT_DEMO.md  README.md  SYSTEM_CHECK_GUIDE.md  UI_COMPONENTS_GUIDE.md  UI_UX_IMPROVEMENTS.md  generate-test-data.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test-azure-integration.js  test-azure-openai.js  vercel.json  verify-azure-config.js  verify-azure-usage.js  verify-final-azure-config.js
hr-assistant-pro/medical-ontology-mcp/: .gitignore  .mcp.json  CITATION.cff  CONTRIBUTING.md  DATA_ACQUISITION.md  Dockerfile  GITHUB_RELEASE.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py  start_server.sh  test_api.py  test_clinical_queries.py  test_loader.py  test_loader_simple.py
hr-assistant-pro/medical-ontology-mcp/.cursor/: mcp.json
hr-assistant-pro/medical-ontology-mcp/config/: config.example.yaml
hr-assistant-pro/medical-ontology-mcp/configs/: windsurf_config.md
hr-assistant-pro/medical-ontology-mcp/data/: README.md
hr-assistant-pro/medical-ontology-mcp/data/sample/: README.md
hr-assistant-pro/medical-ontology-mcp/docs/: API_REFERENCE.md  DATA_SOURCES.md  INSTITUTIONAL_SETUP.md  PREPROCESSING.md  SETUP.md  TROUBLESHOOTING.md
hr-assistant-pro/medical-ontology-mcp/examples/: basic_usage.py  research_workflow.ipynb  research_workflow.py
hr-assistant-pro/medical-ontology-mcp/scripts/: postinstall.js
hr-assistant-pro/medical-ontology-mcp/setup/: configure_mcp.py  create_sample_data.py  prepare_data.py  preprocess_all.py  preprocess_icd10.py  preprocess_icd10_xml.py  preprocess_loinc.py  preprocess_rxnorm.py  preprocess_snomed.py  quick_start.sh  verify_data.py
hr-assistant-pro/medical-ontology-mcp/src/: server.py  simple_server.py
hr-assistant-pro/medical-ontology-mcp/src/config/: __init__.py  settings.py
hr-assistant-pro/medical-ontology-mcp/src/loaders/: __init__.py  base_loader.py  icd10_loader.py  loinc_loader.py  ontology_loader.py  rxnorm_loader.py  snomed_loader.py
hr-assistant-pro/medical-ontology-mcp/src/mapping/: __init__.py  text_mapper.py
hr-assistant-pro/medical-ontology-mcp/src/medical_ontology_mcp/: __init__.py  cli.py  client.py  jupyter_magic.py  server.py
hr-assistant-pro/medical-ontology-mcp/src/search/: __init__.py  search_engine.py
hr-assistant-pro/test_resumes/: resume_100_jason.txt  resume_10_jason.txt  resume_11_calvin.txt  resume_12_JCR.txt  resume_13_jason.txt  resume_14_calvin.txt  resume_15_JCR.txt  resume_16_jason.txt  resume_17_calvin.txt  resume_18_JCR.txt  resume_19_jason.txt  resume_1_jason.txt  resume_20_calvin.txt  resume_21_JCR.txt  resume_22_jason.txt  resume_23_calvin.txt  resume_24_JCR.txt  resume_25_jason.txt  resume_26_calvin.txt  resume_27_JCR.txt  resume_28_jason.txt  resume_29_calvin.txt  resume_2_calvin.txt  resume_30_JCR.txt  resume_31_jason.txt  resume_32_calvin.txt  resume_33_JCR.txt  resume_34_jason.txt  resume_35_calvin.txt  resume_36_JCR.txt  resume_37_jason.txt  resume_38_calvin.txt  resume_39_JCR.txt  resume_3_JCR.txt  resume_40_jason.txt  resume_41_calvin.txt  resume_42_JCR.txt  resume_43_jason.txt  resume_44_calvin.txt  resume_45_JCR.txt  (+60 more)
scripts/: system-check.js
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AdaptiveResults.tsx  ApiKeyTester.tsx  ChatAssistant.tsx  EnhancedHeader.tsx  EnhancedLoading.tsx  EnhancedResultsVisualization.tsx  ErrorBoundary.tsx  EvaluationResultCard.tsx  FloatingChatWidget.tsx  ProcessGuide.tsx  ProcessingDisclaimer.tsx  ResultsDashboard.tsx
src/lib/: candidateEvaluator.ts  candidateEvaluatorV2.ts  chatService.ts  corsHeaders.ts  envMiddleware.ts  jobTypeDetector.ts  jobTypeProfiles.ts  logger.ts  lruCache.ts  requirementExtractor.ts  resumePreprocessor.ts  retryUtils.ts  scoreCalculator.ts  scoringRubric.ts  securityHeaders.ts  validateEnv.ts
src/types/: chat.ts  index.ts  pdf-parse-fork.d.ts  pdfreader.d.ts
test resumes/: Dakkariah Doss resume.docx  Federal Resume Thomas 2025.docx  Francisco Avitia  corret resume .docx  Keyanna Paige CNA Resume-2 2.docx  Leon Allen Resume.docx  Yarely’s Resume.docx  briana j2024.docx
(+37 files in other folders)
